--- a/hair_products.html
+++ b/hair_products.html
@@ -218,7 +218,7 @@ Mail ID - junosaffron@gmail.com
 								<a href="tel:9442010444" class="tm-social-link" style="text-decoration: none; font-size: 23px; font-family: Open Sans;"><i class="fas fa-phone tm-social-icon"></i></a>
 								<a href="https://youtube.com" class="tm-social-link" style="text-decoration: none; font-size: 23px; font-family: Open Sans;"><i class="fab fa-youtube tm-social-icon"></i></a>
 						</div>
-						<a href="tel:080-090-0110" class="tm-contact-link" style="font-size: 15px; font-family: Open Sans;">
+						<a href="tel:9442010444" class="tm-contact-link" style="font-size: 15px; font-family: Open Sans;">
 								<i class="fas fa-phone tm-contact-icon"></i>+91 9442010444</a>
 						<a href="mailto:info@company.co" class="tm-contact-link" style="font-size: 15px; font-family: Open Sans;">
 							<i class="fas fa-envelope tm-contact-icon"></i>info2bioreal@gmail.com</a>
